Adjusted the nav-tabs content border Attempt to fix alignment issue for nav-tabs content

--- a/StaticFiles/CSS/PageCSS/product-style.css
+++ b/StaticFiles/CSS/PageCSS/product-style.css
@@ -8,18 +8,21 @@
 
 
 .tab-content {
-    margin-top: 1.4rem;
+    /* margin-top: 1.4rem; */
     width: 100%;
     padding: 3rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.75);
+    border-left: 1px solid #dee2e6;
+    border-right: 1px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
 }
 
 
 .pet-menu {
-    display: flex;
+    display: block;
     width: fit-content;
     margin: 0 auto;
     flex-direction:column;
